language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/imm_borrow_on_mut_invalid.exp
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/imm_borrow_on_mut_invalid.move:25:29
   │
24 │         let field_ref = set_and_pick(account, copy point_ref);
   │                         ------------------------------------- It is still being mutably borrowed by this reference
25 │         let x_val = *freeze(&mut point_ref.x);
   │                             ^^^^^^^^^^^^^^^^ Invalid mutable borrow at field 'x'.

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/imm_borrow_on_mut_invalid.move:39:23
   │
38 │         let field_ref = set_and_pick(account, copy point_ref);
   │                         ------------------------------------- It is still being mutably borrowed by this reference
39 │         let x_val = *&freeze(point_ref).x;
   │                       ^^^^^^^^^^^^^^^^^ Invalid freeze.

